...
        },
    },
    Post: {
        screen: Post,
        navigationOptions: {
            tabBarLabel: 'Publicar',
            tabBarTestID: 'postTab',
            barBackgroundColor: '#E1306C',
            tabBarIcon: ({ tintColor }) =>
                <Image
                    style={{ height: 23, width: 23, tintColor }}
                    source={require('../../assets/images/icons/menu/camera.png')}
                />
...

screens = Object.assign(screens, {
    Profile: {
        screen: Profile,
        navigationOptions: {
            tabBarLabel: 'Perfil',
            tabBarTestID: 'profileTab',
            barBackgroundColor: '#E1306C',
            tabBarIcon: ({ tintColor }) =>
                <Image
                    style={{ height: 23, width: 23, tintColor }}
                    source={require('../../assets/images/icons/menu/perfil2.png')}
                />
...
